// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component correctly 1`] = `
<div>
  <div
    aria-label="Bookmarked"
    className="filled"
  >
    <svg
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": "20px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": "16px",
        }
      }
      tabIndex="0"
      viewBox="0 0 15 18"
    >
      <path
        d="M11.5,-0.0004 L0.5,-0.0004 C0.224,-0.0004 0,0.2236 0,0.4996 L0,16.4996 C0,16.6996 0.119,16.8806 0.302, 16.9586 C0.488,17.0396 0.699,16.9996 0.844,16.8636 L6,11.9876 L11.156,16.8636 C11.251,16.9526 11.375, 16.9996 11.5,16.9996 C11.566,16.9996 11.634,16.9866 11.698,16.9586 C11.881,16.8806 12,16.6996 12, 16.4996 L12,0.4996 C12,0.2236 11.776,-0.0004 11.5,-0.0004 L11.5,-0.0004 Z"
        fill="#FFF"
      />
    </svg>
  </div>
</div>
`;

exports[`should render SvgIcon 1`] = `
<div>
  <div
    aria-label="Bookmarked"
    className="filled"
  >
    <svg
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": "20px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": "16px",
        }
      }
      tabIndex="0"
      viewBox="0 0 15 18"
    >
      <path
        d="M11.5,-0.0004 L0.5,-0.0004 C0.224,-0.0004 0,0.2236 0,0.4996 L0,16.4996 C0,16.6996 0.119,16.8806 0.302, 16.9586 C0.488,17.0396 0.699,16.9996 0.844,16.8636 L6,11.9876 L11.156,16.8636 C11.251,16.9526 11.375, 16.9996 11.5,16.9996 C11.566,16.9996 11.634,16.9866 11.698,16.9586 C11.881,16.8806 12,16.6996 12, 16.4996 L12,0.4996 C12,0.2236 11.776,-0.0004 11.5,-0.0004 L11.5,-0.0004 Z"
        fill="#FFF"
      />
    </svg>
  </div>
</div>
`;

exports[`should render onClick 1`] = `
<div>
  <div
    aria-label="Bookmarked"
    className="filled"
  >
    <svg
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": "20px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": "16px",
        }
      }
      tabIndex="0"
      viewBox="0 0 15 18"
    >
      <path
        d="M11.5,-0.0004 L0.5,-0.0004 C0.224,-0.0004 0,0.2236 0,0.4996 L0,16.4996 C0,16.6996 0.119,16.8806 0.302, 16.9586 C0.488,17.0396 0.699,16.9996 0.844,16.8636 L6,11.9876 L11.156,16.8636 C11.251,16.9526 11.375, 16.9996 11.5,16.9996 C11.566,16.9996 11.634,16.9866 11.698,16.9586 C11.881,16.8806 12,16.6996 12, 16.4996 L12,0.4996 C12,0.2236 11.776,-0.0004 11.5,-0.0004 L11.5,-0.0004 Z"
        fill="#FFF"
      />
    </svg>
  </div>
</div>
`;

exports[`should render onClick 2`] = `
<div>
  <div
    aria-label="Not Bookmarked"
    className="unfilled"
  >
    <svg
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": "20px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": "16px",
        }
      }
      tabIndex="0"
      viewBox="0 0 15 18"
    >
      <path
        d="M13.2266667,0 L0.48,0 C0.32,0 0.16,0.154285714 0.16,0.308571429 L0.16,17.2285714 C0.16,17.3314286 0.213333333, 17.4342857 0.32,17.4857143 C0.373333333,17.4857143 0.426666667,17.5371429 0.48,17.5371429 C0.533333333, 17.5371429 0.586666667,17.5371429 0.64,17.4857143 L6.72,13.5257143 L13.0666667,17.4857143 C13.12, 17.5371429 13.1733333,17.5371429 13.2266667,17.5371429 C13.28,17.5371429 13.3333333,17.5371429 13.3866667, 17.4857143 C13.4933333,17.4342857 13.5466667,17.3314286 13.5466667,17.2285714 L13.5466667,0.308571429 C13.4933333, 0.154285714 13.3866667,0 13.2266667,0 L13.2266667,0 Z M12.32,15.5828571 L7.41333333,12.4971429 L6.72, 12.0857143 L6.08,12.4971429 L1.44,15.5314286 L1.44,1.13142857 L12.3733333,1.13142857 L12.3733333, 15.5828571 L12.32,15.5828571 Z"
        fill="#FFF"
        id="Shape"
      />
    </svg>
  </div>
</div>
`;

exports[`should render onKeyDown 1`] = `
<div>
  <div
    aria-label="Bookmarked"
    className="filled"
  >
    <svg
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": "20px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": "16px",
        }
      }
      tabIndex="0"
      viewBox="0 0 15 18"
    >
      <path
        d="M11.5,-0.0004 L0.5,-0.0004 C0.224,-0.0004 0,0.2236 0,0.4996 L0,16.4996 C0,16.6996 0.119,16.8806 0.302, 16.9586 C0.488,17.0396 0.699,16.9996 0.844,16.8636 L6,11.9876 L11.156,16.8636 C11.251,16.9526 11.375, 16.9996 11.5,16.9996 C11.566,16.9996 11.634,16.9866 11.698,16.9586 C11.881,16.8806 12,16.6996 12, 16.4996 L12,0.4996 C12,0.2236 11.776,-0.0004 11.5,-0.0004 L11.5,-0.0004 Z"
        fill="#FFF"
      />
    </svg>
  </div>
</div>
`;

exports[`should render onMouseEnter 1`] = `
<div>
  <div
    aria-label="Bookmarked"
    className="filled"
  >
    <svg
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": "20px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": "16px",
        }
      }
      tabIndex="0"
      viewBox="0 0 15 18"
    >
      <path
        d="M11.5,-0.0004 L0.5,-0.0004 C0.224,-0.0004 0,0.2236 0,0.4996 L0,16.4996 C0,16.6996 0.119,16.8806 0.302, 16.9586 C0.488,17.0396 0.699,16.9996 0.844,16.8636 L6,11.9876 L11.156,16.8636 C11.251,16.9526 11.375, 16.9996 11.5,16.9996 C11.566,16.9996 11.634,16.9866 11.698,16.9586 C11.881,16.8806 12,16.6996 12, 16.4996 L12,0.4996 C12,0.2236 11.776,-0.0004 11.5,-0.0004 L11.5,-0.0004 Z"
        fill="#FFF"
      />
    </svg>
  </div>
</div>
`;

exports[`should render onMouseEnter 2`] = `
<div>
  <div
    aria-label="Bookmarked"
    className="filled"
  >
    <svg
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": "20px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": "16px",
        }
      }
      tabIndex="0"
      viewBox="0 0 15 18"
    >
      <path
        d="M11.5,-0.0004 L0.5,-0.0004 C0.224,-0.0004 0,0.2236 0,0.4996 L0,16.4996 C0,16.6996 0.119,16.8806 0.302, 16.9586 C0.488,17.0396 0.699,16.9996 0.844,16.8636 L6,11.9876 L11.156,16.8636 C11.251,16.9526 11.375, 16.9996 11.5,16.9996 C11.566,16.9996 11.634,16.9866 11.698,16.9586 C11.881,16.8806 12,16.6996 12, 16.4996 L12,0.4996 C12,0.2236 11.776,-0.0004 11.5,-0.0004 L11.5,-0.0004 Z"
        fill="#FFF"
      />
    </svg>
  </div>
</div>
`;

exports[`should render onMouseLeave 1`] = `
<div>
  <div
    aria-label="Bookmarked"
    className="filled"
  >
    <svg
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": "20px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": "16px",
        }
      }
      tabIndex="0"
      viewBox="0 0 15 18"
    >
      <path
        d="M11.5,-0.0004 L0.5,-0.0004 C0.224,-0.0004 0,0.2236 0,0.4996 L0,16.4996 C0,16.6996 0.119,16.8806 0.302, 16.9586 C0.488,17.0396 0.699,16.9996 0.844,16.8636 L6,11.9876 L11.156,16.8636 C11.251,16.9526 11.375, 16.9996 11.5,16.9996 C11.566,16.9996 11.634,16.9866 11.698,16.9586 C11.881,16.8806 12,16.6996 12, 16.4996 L12,0.4996 C12,0.2236 11.776,-0.0004 11.5,-0.0004 L11.5,-0.0004 Z"
        fill="#FFF"
      />
    </svg>
  </div>
</div>
`;

exports[`should render onMouseLeave 2`] = `
<div>
  <div
    aria-label="Bookmarked"
    className="filled"
  >
    <svg
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": "20px",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": "16px",
        }
      }
      tabIndex="0"
      viewBox="0 0 15 18"
    >
      <path
        d="M11.5,-0.0004 L0.5,-0.0004 C0.224,-0.0004 0,0.2236 0,0.4996 L0,16.4996 C0,16.6996 0.119,16.8806 0.302, 16.9586 C0.488,17.0396 0.699,16.9996 0.844,16.8636 L6,11.9876 L11.156,16.8636 C11.251,16.9526 11.375, 16.9996 11.5,16.9996 C11.566,16.9996 11.634,16.9866 11.698,16.9586 C11.881,16.8806 12,16.6996 12, 16.4996 L12,0.4996 C12,0.2236 11.776,-0.0004 11.5,-0.0004 L11.5,-0.0004 Z"
        fill="#FFF"
      />
    </svg>
  </div>
</div>
`;
